--- a/package.json
+++ b/package.json
@@ -1,14 +1,15 @@
 {
   "name": "whatsapp-spanish-tutor",
   "version": "1.0.0",
+  "main": "index.js",
   "type": "module",
-  "dependencies": {
-    "pg": "^8.11.0"
-    "express": "^4.19.2",
-    "body-parser": "^1.20.2",
-    "twilio": "^4.22.0"
-  },
   "scripts": {
     "start": "node index.js"
+  },
+  "dependencies": {
+    "express": "^4.18.2",
+    "body-parser": "^1.20.2",
+    "twilio": "^4.20.0",
+    "pg": "^8.11.0"
   }
 }
