--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "express": "^4.18.2",
     "body-parser": "^1.20.2",
     "twilio": "^4.20.0",
-    "pg": "^8.11.0"
+    "pg": "^8.11.0",
+    "openai": "^4.0.0"
   }
 }
